--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ authors = [{ name = "Wei Ji (FlySkyPie)", email = "c445dj544@gmail.com" }]
 dependencies = [
     "fastapi[standard]>=0.112.2",
     "bpy>=4.2.0",
+    "aiofiles>=24.1.0",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
