--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "fastapi[standard]>=0.112.2",
     "bpy>=4.2.0",
     "aiofiles>=24.1.0",
+    "scipy>=1.14.1",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
